Archive/CISK8sBenchmarkPolicies/K8sPodsRequireSecurityContext.yml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sPodsRequireSecurityContext
metadata:
  name: cis-k8s-v1.5.1-pods-require-security-context
  labels:
    policycontroller.gke.io/bundleName: cis-k8s-v1.5.1
  annotations:
    # This constraint is not certified by CIS.
    policycontroller.gke.io/constraintData: |
      "{
        bundleName: 'cis-k8s-v1.5.1',
        bundleDisplayName: 'CIS Kubernetes Benchmark 1.5.1',
        bundleLink: 'https://cloud.google.com/anthos-config-management/docs/how-to/using-cis-k8s-benchmark',
        bundleVersion: '202211.0',
        bundleDescription: 'Use the CIS Kubernetes Benchmark 1.5.1 policy bundle with Anthos Policy Controller to evaluate the compliance of your cluster resources against the CIS Kubernetes Benchmark, which is a set of recommendations for configuring Kubernetes to support a robust security posture.',
        controlNumbers: '[5.7.3]',
        severity: 'UNASSIGNED',
        description: 'Requires that Pods define `securityContext`.',
        remediation: 'Containers cannot run without a `securityContext` defined. Set your containers `securityContext: `. See “Set the security context for a Pod” for more information: https://kubernetes.io/docs/tasks/configure-pod-container/security-context/#set-the-security-context-for-a-pod',
        minimumTemplateLibraryVersion: '1.10.2'
      }"
spec:
  enforcementAction: dryrun
  match:
    excludedNamespaces:
      - kube-system
      - config-management-system
      - asm-system
