Archive/CISK8sBenchmarkPolicies/K8sRequireNamespaceNetworkPolicies.yml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sRequireNamespaceNetworkPolicies
metadata:
  name: cis-k8s-v1.5.1-require-namespace-network-policies
  labels:
    policycontroller.gke.io/bundleName: cis-k8s-v1.5.1
  annotations:
    # This constraint is not certified by CIS.
    policycontroller.gke.io/constraintData: |
      "{
        bundleName: 'cis-k8s-v1.5.1',
        bundleDisplayName: 'CIS Kubernetes Benchmark 1.5.1',
        bundleLink: 'https://cloud.google.com/anthos-config-management/docs/how-to/using-cis-k8s-benchmark',
        bundleVersion: '202211.0',
        bundleDescription: 'Use the CIS Kubernetes Benchmark 1.5.1 policy bundle with Anthos Policy Controller to evaluate the compliance of your cluster resources against the CIS Kubernetes Benchmark, which is a set of recommendations for configuring Kubernetes to support a robust security posture.',
        controlNumbers: '[5.3.2]',
        severity: 'UNASSIGNED',
        description: 'Requires that every namespace defined in the cluster has a NetworkPolicy.',
        remediation: 'The use of a namespace in the cluster without a NetworkPolicy is restricted. Add a NetworkPolicy to your namespace. See “Network Policies” for more information: https://kubernetes.io/docs/concepts/services-networking/network-policies',
        minimumTemplateLibraryVersion: '1.10.1'
      }"
spec:
  enforcementAction: dryrun
  match:
    excludedNamespaces:
      - kube-system
      - kube-node-lease
      - kube-public
      - gatekeeper-system
      - config-management-system
      - config-management-monitoring
      - resource-group-system
      - gke-connect
      - istio-system
      - asm-system
      - default
